tests/build/cases/widget_new/error_in_property_expr.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `unknown`
 --> cases/widget_new/error_in_property_expr.rs:8:21
  |
8 |             let _ = unknown::path();
  |                     ^^^^^^^ use of undeclared crate or module `unknown`
